opam-version: "2.0"
depends: [
  "eio"
  "dream"
  "tcpip"
  "tls-eio"
  "multipart_form"
]
pin-depends: [
  [ "multipart_form.dev" "git+https://github.com/dinosaure/multipart_form#a794239b8fc9601540ffea489b2c470227216c5e"]
  [ "multipart_form-lwt.dev" "git+https://github.com/dinosaure/multipart_form#a794239b8fc9601540ffea489b2c470227216c5e"]
  [ "multipart_form-eio.dev" "git+https://github.com/dinosaure/multipart_form#a794239b8fc9601540ffea489b2c470227216c5e"]
  [ "zarith.dev" "https://github.com/mirage/Zarith/releases/download/release-1.12+dune1/zarith-release-1.12+dune1.tbz"]
]